--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
         doNotStrip "*/*/libFR.so"
         exclude 'META-INF/rxjava.properties'
     }
+
+    aaptOptions{
+        noCompress "tflite"
+    }
 }
 
 dependencies {
@@ -39,4 +43,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api('com.dji:dji-sdk:4.8')
     compileOnly('com.dji:dji-sdk-provided:4.8')
+    implementation 'org.tensorflow:tensorflow-lite:+'
 }
