--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     aaptOptions {
         noCompress "tflite"
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
