--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         </activity>
         <activity android:name=".CameraActivity"></activity>
 
+        <service android:name=".GPSLog_Service"></service>
 
     </application>
 
