Added Half Circle and Pyramid models to dailib

--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,12 @@ task clean(type: Delete) {
 
 subprojects{
     tasks.withType(Javadoc).all{enabled = false}
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "26.1.0"
+            }
+        }
+    }
 }
