--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     api('com.dji:dji-sdk:4.8')
     compileOnly('com.dji:dji-sdk-provided:4.8')
     implementation 'org.tensorflow:tensorflow-lite:1.13.1'
-    implementation 'com.nermi.dailib:dailib:1.0.3'
+    //implementation 'com.nermi.dailib:dailib:1.0.5'
+    implementation project(":dailib")
 }
